new cloud configs

--- a/scripts/scan/lhc_configs.yml
+++ b/scripts/scan/lhc_configs.yml
@@ -1,7 +1,6 @@
 cloud: 
 
     run_configs: 
-        
 
         - 'srp-timing-cpu' # Done 
         - 'rds-timing-cpu' # In progress
@@ -15,8 +14,7 @@ cloud:
         'f32-srp-timing-cpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            # 'bunches': [12],
-            'bunches': [24],
+            'bunches': [48, 96, 192],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -31,19 +29,19 @@ cloud:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [4],
+            'workers': [8, 16, 32],
             'omp': [32],            
             'mpi': ['mvapich2'],
             'cores_per_cpu': [64],
             'partition': ['cloud'],
-            'time': [120],
+            'time': [60],
             'repeats': 3
         },
 
         'f32-rds-timing-cpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [24],
+            'bunches': [48, 96, 192],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -58,19 +56,19 @@ cloud:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [4],
+            'workers': [8, 16, 32],
             'omp': [32],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [64],
             'partition': ['cloud'],
-            'time': [120],
+            'time': [60],
             'repeats': 3
         },
 
         'srp-timing-cpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [24],
+            'bunches': [48, 96, 192],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -85,19 +83,19 @@ cloud:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [4],
+            'workers': [8, 16, 32],
             'omp': [32],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [64],
             'partition': ['cloud'],
-            'time': [120],
+            'time': [60],
             'repeats': 3
         },
 
         'rds-timing-cpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [24],
+            'bunches': [48, 96, 192],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -112,19 +110,19 @@ cloud:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [4],
+            'workers': [8, 16, 32],
             'omp': [32],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [64],
             'partition': ['cloud'],
-            'time': [120],
+            'time': [60],
             'repeats': 3
         },
 
         'exact-timing-cpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [24],
+            'bunches': [48, 96, 192],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -139,10 +137,10 @@ cloud:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [4],
+            'workers': [8, 16, 32],
             'omp': [32],
             'mpi': ['mvapich2'],
-            'time': [120],
+            'time': [60],
             'cores_per_cpu': [64],
             'partition': ['cloud'],
             'repeats': 3
@@ -151,7 +149,7 @@ cloud:
         'float32-timing-cpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [24],
+            'bunches': [48, 96, 192],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -166,12 +164,12 @@ cloud:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [4],
+            'workers': [8, 16, 32],
             'omp': [32],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [64],
             'partition': ['cloud'],
-            'time': [120],
+            'time': [60],
             'repeats': 3
         },
     }
