--- a/scripts/scan/ps_configs.yml
+++ b/scripts/scan/ps_configs.yml
@@ -10,15 +10,12 @@ cloud:
         - 'f32-srp-timing-cpu' 
         - 'f32-rds-timing-cpu' 
 
-
-
-
     configs: {
 
         # Approximate
         'f32-srp-timing-cpu': {
             'exe': ['PS_main.py'],
-            'particles': [2000000],
+            'particles': [4000000, 8000000, 16000000],
             'bunches': [21],  # 96
             'slices': [256],
             'turns': [10000],
@@ -34,19 +31,19 @@ cloud:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [4], #, 16],
+            'workers': [8, 16, 32], #, 16],
             'omp': [32],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [64],
             'partition': ['cloud'],
-            'time': [120],
+            'time': [60],
             'repeats': 3
         },
 
 
         'f32-rds-timing-cpu': {
             'exe': ['PS_main.py'],
-            'particles': [2000000], #, 400000],
+            'particles': [4000000, 8000000, 16000000], #, 400000],
             'bunches': [21],  # 96
             'slices': [256],
             'turns': [10000],
@@ -62,19 +59,19 @@ cloud:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [4], #, 16],
+            'workers': [8, 16, 32], #, 16],
             'omp': [32],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [64],
             'partition': ['cloud'],
-            'time': [120],
+            'time': [60],
             'repeats': 3
         },
 
 
         'srp-timing-cpu': {
             'exe': ['PS_main.py'],
-            'particles': [2000000],
+            'particles': [4000000, 8000000, 16000000],
             'bunches': [21],  # 96
             'slices': [256],
             'turns': [10000],
@@ -90,19 +87,19 @@ cloud:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [4], #, 16],
+            'workers': [8, 16, 32], #, 16],
             'omp': [32],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [64],
             'partition': ['cloud'],
-            'time': [120],
+            'time': [60],
             'repeats': 3
         },
 
 
         'rds-timing-cpu': {
             'exe': ['PS_main.py'],
-            'particles': [2000000], #, 400000],
+            'particles': [4000000, 8000000, 16000000], #, 400000],
             'bunches': [21],  # 96
             'slices': [256],
             'turns': [10000],
@@ -118,18 +115,18 @@ cloud:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [4], #, 16],
+            'workers': [8, 16, 32], #, 16],
             'omp': [32],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [64],
             'partition': ['cloud'],
-            'time': [120],
+            'time': [60],
             'repeats': 3
         },
 
         'exact-timing-cpu': {
             'exe': ['PS_main.py'],
-            'particles': [2000000], #, 400000],
+            'particles': [4000000, 8000000, 16000000], #, 400000],
             'bunches': [21],  # 96
             'slices': [256],
             'turns': [10000],
@@ -145,19 +142,19 @@ cloud:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [4], #, 16],
+            'workers': [8, 16, 32], #, 16],
             'omp': [32],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [64],
             'partition': ['cloud'],
-            'time': [120],
+            'time': [60],
             'repeats': 3
         },
 
 
         'float32-timing-cpu': {
             'exe': ['PS_main.py'],
-            'particles': [2000000],
+            'particles': [4000000, 8000000, 16000000],
             'bunches': [21],  # 96
             'slices': [256],
             'turns': [10000],
@@ -173,12 +170,12 @@ cloud:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [4], #, 16],
+            'workers': [8, 16, 32], #, 16],
             'omp': [32],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [64],
             'partition': ['cloud'],
-            'time': [120],
+            'time': [60],
             'repeats': 3
         },
     }
