new cloud configs

--- a/scripts/scan/lhc_configs.yml
+++ b/scripts/scan/lhc_configs.yml
@@ -631,7 +631,7 @@ slurm:
         'f32-srp-timing-cpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [48, 96],
+            'bunches': [192],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -646,7 +646,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [8, 16],
+            'workers': [32],
             'omp': [10],            
             'mpi': ['mvapich2'],
             'cores_per_cpu': [20],
@@ -658,7 +658,7 @@ slurm:
         'f32-rds-timing-cpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [48, 96],
+            'bunches': [192],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -673,7 +673,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [8, 16],
+            'workers': [32],
             'omp': [10],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [20],
@@ -685,7 +685,7 @@ slurm:
         'srp-timing-cpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [48, 96],
+            'bunches': [192],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -700,7 +700,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [8, 16],
+            'workers': [32],
             'omp': [10],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [20],
@@ -712,7 +712,7 @@ slurm:
         'rds-timing-cpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [48, 96],
+            'bunches': [192],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -727,7 +727,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [8, 16],
+            'workers': [32],
             'omp': [10],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [20],
@@ -739,7 +739,7 @@ slurm:
         'exact-timing-cpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [48, 96],
+            'bunches': [192],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -754,7 +754,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [8, 16],
+            'workers': [32],
             'omp': [10],
             'mpi': ['mvapich2'],
             'time': [120],
@@ -766,7 +766,7 @@ slurm:
         'float32-timing-cpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [48, 96],
+            'bunches': [192],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -781,7 +781,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [8, 16],
+            'workers': [32],
             'omp': [10],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [20],
