--- a/scripts/scan/sps_configs.yml
+++ b/scripts/scan/sps_configs.yml
@@ -628,7 +628,7 @@ slurm:
         'f32-srp-timing-cpu': {
             'exe': ['SPS_main.py'],
             'particles': [1000000], # 2000000],
-            'bunches': [72, 144], #72],
+            'bunches': [288], #72],
             'slices': [1408],
             'turns': [10000],
             'monitor': [0],
@@ -643,7 +643,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [8, 16], #16],
+            'workers': [32], #16],
             'omp': [10],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [20],
@@ -655,7 +655,7 @@ slurm:
         'f32-rds-timing-cpu': {
             'exe': ['SPS_main.py'],
             'particles': [1000000], # 2000000],
-            'bunches': [72, 144], #72],
+            'bunches': [288], #72],
             'slices': [1408],
             'turns': [10000],
             'monitor': [0],
@@ -670,7 +670,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [8, 16], #16],
+            'workers': [32], #16],
             'omp': [10],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [20],
@@ -682,7 +682,7 @@ slurm:
         'srp-timing-cpu': {
             'exe': ['SPS_main.py'],
             'particles': [1000000], # 2000000],
-            'bunches': [72, 144], #72],
+            'bunches': [288], #72],
             'slices': [1408],
             'turns': [10000],
             'monitor': [0],
@@ -697,7 +697,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [8, 16], #16],
+            'workers': [32], #16],
             'omp': [10],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [20],
@@ -709,7 +709,7 @@ slurm:
         'rds-timing-cpu': {
             'exe': ['SPS_main.py'],
             'particles': [1000000], # 2000000],
-            'bunches': [72, 144], #72],
+            'bunches': [288], #72],
             'slices': [1408],
             'turns': [10000],
             'monitor': [0],
@@ -724,7 +724,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [8, 16], #16],
+            'workers': [32], #16],
             'omp': [10],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [20],
@@ -736,7 +736,7 @@ slurm:
         'exact-timing-cpu': {
             'exe': ['SPS_main.py'],
             'particles': [1000000], # 2000000],
-            'bunches': [72, 144], #72],
+            'bunches': [288], #72],
             'slices': [1408],
             'turns': [10000],
             'monitor': [0],
@@ -751,7 +751,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [8, 16], #16],
+            'workers': [32], #16],
             'omp': [10],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [20],
@@ -764,7 +764,7 @@ slurm:
         'float32-timing-cpu': {
             'exe': ['SPS_main.py'],
             'particles': [1000000], # 2000000],
-            'bunches': [72, 144], #72],
+            'bunches': [288], #72],
             'slices': [1408],
             'turns': [10000],
             'monitor': [0],
@@ -779,7 +779,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [8, 16], #16],
+            'workers': [32], #16],
             'omp': [10],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [20],
