--- a/scripts/scan/sps_configs.yml
+++ b/scripts/scan/sps_configs.yml
@@ -616,12 +616,12 @@ slurm:
         # - 'f32-rds-timing-gpu' 
 
         # Approximate 
-        - 'srp-timing-cpu'
-        - 'rds-timing-cpu' 
+        # - 'srp-timing-cpu'
+        # - 'rds-timing-cpu' 
         - 'exact-timing-cpu' 
-        - 'float32-timing-cpu' 
-        - 'f32-srp-timing-cpu'
-        - 'f32-rds-timing-cpu'
+        # - 'float32-timing-cpu' 
+        # - 'f32-srp-timing-cpu'
+        # - 'f32-rds-timing-cpu'
 
     configs: {
 
@@ -751,13 +751,13 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [32], #16],
-            'omp': [10],
+            'workers': [1], #16],
+            'omp': [20],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [20],
             'partition': ['inf-short'],
-            'time': [120],
-            'repeats': 2
+            'time': [240],
+            'repeats': 3
         },
 
 
